--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Documento</title>
 </head>
 <body>
     <h1>
-        Maten a los koreanos
+        Maten a los cabrones
     </h1>
     <test>listo</test>
 </body>
