--- a/index.html
+++ b/index.html
@@ -12,3 +12,12 @@
     <test>listo</test>
 </body>
 </html>
+
+
+<!-- pal coso de github se abre el terminal del visual ( al lado de run ) y luego nuevo terminal
+    luego para vincular se pone "git init" y luego
+    "git remote add origin https://github.com/LeKonser/mi-supositorio.git" luego "git status -->
+
+<!-- si sale en rojo hay que hacer un "git add ." luego, "git status" después de eso,
+    poner "git commit -m "Ingresar mensaje" y para terminar un
+    "git push --set-upstream origin master" -->
