Ingresar mensaje numero 2

--- a/index.html
+++ b/index.html
@@ -20,4 +20,4 @@
 
 <!-- si sale en rojo hay que hacer un "git add ." luego, "git status" después de eso,
     poner "git commit -m "Ingresar mensaje" y para terminar un
-    "git push --set-upstream origin master" -->
+    "git push --set-upstream origin master" y se subiría la wea de supositorio-->
