--- a/index.html
+++ b/index.html
@@ -21,3 +21,27 @@
 <!-- si sale en rojo hay que hacer un "git add ." luego, "git status" después de eso,
     poner "git commit -m "Ingresar mensaje" y para terminar un
     "git push --set-upstream origin master" y se subiría la wea de supositorio-->
+
+
+<h2>ORDENAO</h2>
+    <ol>
+        <li>alo</li>
+        <li>alo</li>
+        <li>alo</li>
+    </ol>
+
+
+<h2>DESORDENAO</h2>
+    <ul>
+        <li>a</li>
+        <li>l</li>
+        <li>o</li>
+    </ul>
+
+<select name="color">
+    <option value="rojo">Rojo</option>
+    <option value="verde">Verde</option>
+    <option value="azul">Azul</option>
+    <option value="Amarillo">Amarillo</option>
+    <option value="morao">MORAO</option>
+</select>
