--- a/index.html
+++ b/index.html
@@ -44,4 +44,11 @@
     <option value="azul">Azul</option>
     <option value="Amarillo">Amarillo</option>
     <option value="morao">MORAO</option>
-</select>
+</select><br>
+
+<input type="checkbox" id="alotia" name="alotia" value="alotia"> 
+<label for="alotia">alotia</label><br>
+<input type="checkbox" id="tienepan" name="tienepan" value="tienepan">
+<label for="tienepan">tienepan</label><br>
+<input type="checkbox" id="nomijito" name="nomijito" value="nomijito">
+<label for="nomijito">nomijito</label><br>
