--- a/index.html
+++ b/index.html
@@ -51,4 +51,23 @@
 <input type="checkbox" id="tienepan" name="tienepan" value="tienepan">
 <label for="tienepan">tienepan</label><br>
 <input type="checkbox" id="nomijito" name="nomijito" value="nomijito">
-<label for="nomijito">nomijito</label><br>
+<label for="nomijito">nomijito</label><br><br>
+
+
+<input type="radio" id="puchao" name="puchao" value="puchao"> 
+<label for="puchao">puchao</label><br>
+<input type="radio" id="naquehacerle" name="puchao" value="naquehacerle">
+<label for="puchao">naquehacerle</label><br>
+<input type="radio" id="yachaotiacuidese" name="puchao" value="yachaotiacuidese">
+<label for="puchao">yachaotiacuidese</label><br>
+<input type="radio" id="locoespecial" name="puchao" value="locoespecial"disabled>
+<label for="puchao">locoespecial</label><br>
+
+<form>
+    <label>Nombre:</label><br>
+    <input type="text" id="nombre" name="nombre" required><br><br>
+
+    <label>Apellido:</label><br>
+    <input type="text" id="apellido" name="apellido" required><br><br>
+
+    <input type="submit" value="Publicar tu momo">
