--- a/index.html
+++ b/index.html
@@ -67,7 +67,11 @@
     <label>Nombre:</label><br>
     <input type="text" id="nombre" name="nombre" required><br><br>
 
-    <label>Apellido:</label><br>
-    <input type="text" id="apellido" name="apellido" required><br><br>
+    <label>Comentario:</label><br>
+    <textarea id="apellido" name="apellido" required></textarea><br><br>
 
     <input type="submit" value="Publicar tu momo">
+
+
+
+    
